Proyecto1/parser.output
Grammar

    0 $accept: inicio END

    1 inicio: list_func

    2 list_func: list_func funcion
    3          | funcion

    4 funcion: RINT ID PARABRE func_list PARCIERRA LLAVEABRE list_inst_func LLAVECIERRA
    5        | RINT ID PARABRE PARCIERRA LLAVEABRE list_inst_func LLAVECIERRA
    6        | RINT R_MAIN PARABRE PARCIERRA LLAVEABRE list_inst_func LLAVECIERRA
    7        | RVOID ID PARABRE func_list PARCIERRA LLAVEABRE list_inst_func LLAVECIERRA
    8        | RVOID ID PARABRE PARCIERRA LLAVEABRE list_inst_func LLAVECIERRA
    9        | RVOID R_MAIN PARABRE PARCIERRA LLAVEABRE list_inst_func LLAVECIERRA
   10        | otro_tipo_func ID PARABRE func_list PARCIERRA LLAVEABRE list_inst_func LLAVECIERRA
   11        | otro_tipo_func ID PARABRE PARCIERRA LLAVEABRE list_inst_func LLAVECIERRA
   12        | RSTRUCT ID LLAVEABRE dec_list LLAVECIERRA

   13 dec_list: dec_list tipo ID PTCOMA
   14         | tipo ID PTCOMA

   15 otro_tipo_func: RFLOAT
   16               | RSTRING
   17               | RBOOL

   18 func_list: func_list COMA tipo ID
   19          | tipo ID

   20 list_inst_func: list_inst_func instruccion_funcion
   21               | instruccion_funcion

   22 instruccion_funcion: instruccion_return PTCOMA
   23                    | declaracion PTCOMA
   24                    | func_printf PTCOMA
   25                    | incremento_instruccion PTCOMA
   26                    | asignacion PTCOMA
   27                    | declaracion_sin_valor PTCOMA
   28                    | instruccion_if
   29                    | instruccion_while
   30                    | instruccion_for
   31                    | declaracion_arreglo
   32                    | creation_struct
   33                    | instrucciones_vector
   34                    | call_instruction

   35 instruccion_return: RRETURN expresion
   36                   | RRETURN

   37 call_instruction: ID PARABRE lista_expresiones_printf PARCIERRA PTCOMA
   38                 | ID PARABRE PARCIERRA PTCOMA
   39                 | ID PUNTO ID IGUAL expresion PTCOMA

   40 instrucciones_vector: ID PUNTO RPUSHBACK PARABRE expresion PARCIERRA PTCOMA
   41                     | ID PUNTO RPUSHFRONT PARABRE expresion PARCIERRA PTCOMA
   42                     | ID PUNTO RREMOVE PARABRE expresion PARCIERRA PTCOMA

   43 declaracion_arreglo: RVECTOR MENOR tipo MAYOR ID PTCOMA
   44                    | RVECTOR MENOR tipo MAYOR ID IGUAL CORABRE lista_expresiones_printf CORCIERRA PTCOMA
   45                    | RVECTOR MENOR tipo MAYOR ID IGUAL CORABRE CORCIERRA PTCOMA

   46 creation_struct: RSTRUCT ID ID IGUAL LLAVEABRE lista_expresiones_printf LLAVECIERRA PTCOMA
   47                | RSTRUCT ID ID PTCOMA

   48 declaracion: tipo ID IGUAL expresion

   49 tipo: RINT
   50     | RFLOAT
   51     | RSTRING
   52     | RBOOL

   53 expresion: expresion OPSUMA expresion
   54          | expresion OPRESTA expresion
   55          | expresion OPMULTIPLICACION expresion
   56          | expresion OPDIVISION expresion
   57          | expresion OPMODULO expresion
   58          | expresion IGUAL IGUAL expresion
   59          | expresion NOIGUAL expresion
   60          | expresion MAYOR expresion
   61          | expresion MENOR expresion
   62          | expresion MAYOR IGUAL expresion
   63          | expresion MENOR IGUAL expresion
   64          | expresion RAND expresion
   65          | expresion ROR expresion
   66          | NOT expresion
   67          | MASMAS ID
   68          | ID MASMAS
   69          | PARABRE expresion PARCIERRA
   70          | OPRESTA expresion
   71          | RATOI PARABRE expresion PARCIERRA
   72          | RATOF PARABRE expresion PARCIERRA
   73          | RIOTA PARABRE expresion PARCIERRA
   74          | op_vector
   75          | primitivo
   76          | RMEAN PARABRE ID PARCIERRA
   77          | RMEDIAN PARABRE ID PARCIERRA
   78          | RMODE PARABRE ID PARCIERRA
   79          | call_expr

   80 call_expr: ID PARABRE lista_expresiones_printf PARCIERRA
   81          | ID PARABRE PARCIERRA

   82 primitivo: TIPO_INTEGER
   83          | TIPO_STRING
   84          | TIPO_FLOAT
   85          | TIPO_BOOL_TRUE
   86          | TIPO_BOOL_FALSE
   87          | llamada_variable

   88 op_vector: ID CORABRE expresion CORCIERRA
   89          | ID PUNTO RGET PARABRE expresion PARCIERRA
   90          | ID PUNTO RSIZE PARABRE PARCIERRA

   91 llamada_variable: ID
   92                 | ID PUNTO ID

   93 func_printf: RPRINTF PARABRE lista_expresiones_printf PARCIERRA

   94 lista_expresiones_printf: lista_expresiones_printf COMA expresion
   95                         | expresion

   96 incremento_instruccion: ID MASMAS
   97                       | MASMAS ID

   98 asignacion: ID IGUAL expresion
   99           | ID CORABRE expresion CORCIERRA IGUAL expresion

  100 declaracion_sin_valor: tipo ID

  101 instruccion_if: R_IF PARABRE expresion PARCIERRA LLAVEABRE cuerpo_if LLAVECIERRA list_elseif list_else
  102               | R_IF PARABRE expresion PARCIERRA LLAVEABRE cuerpo_if LLAVECIERRA list_elseif
  103               | R_IF PARABRE expresion PARCIERRA LLAVEABRE cuerpo_if LLAVECIERRA list_else
  104               | R_IF PARABRE expresion PARCIERRA LLAVEABRE cuerpo_if LLAVECIERRA

  105 cuerpo_if: cuerpo_if instruccion_if_cuerpo
  106          | instruccion_if_cuerpo

  107 instruccion_if_cuerpo: func_printf PTCOMA
  108                      | instruccion_for
  109                      | instruccion_if
  110                      | incremento_instruccion PTCOMA
  111                      | asignacion PTCOMA
  112                      | RBREAK PTCOMA
  113                      | RCONTINUE PTCOMA
  114                      | instruccion_while
  115                      | declaracion PTCOMA
  116                      | declaracion_sin_valor PTCOMA
  117                      | creation_struct
  118                      | declaracion_arreglo
  119                      | instrucciones_vector
  120                      | instruccion_return PTCOMA

  121 list_elseif: list_elseif R_ELSE R_IF PARABRE expresion PARCIERRA LLAVEABRE cuerpo_if LLAVECIERRA
  122            | R_ELSE R_IF PARABRE expresion PARCIERRA LLAVEABRE cuerpo_if LLAVECIERRA

  123 list_else: R_ELSE LLAVEABRE cuerpo_if LLAVECIERRA

  124 instruccion_while: RWHILE PARABRE expresion PARCIERRA LLAVEABRE cuerpo_while LLAVECIERRA

  125 cuerpo_while: cuerpo_while instruccion_while_cuerpo
  126             | instruccion_while_cuerpo

  127 instruccion_while_cuerpo: func_printf PTCOMA
  128                         | instruccion_for
  129                         | instruccion_if
  130                         | incremento_instruccion PTCOMA
  131                         | asignacion PTCOMA
  132                         | RBREAK PTCOMA
  133                         | RCONTINUE PTCOMA
  134                         | instruccion_while
  135                         | declaracion PTCOMA
  136                         | declaracion_sin_valor PTCOMA
  137                         | creation_struct
  138                         | declaracion_arreglo
  139                         | instrucciones_vector
  140                         | instruccion_return PTCOMA

  141 instruccion_for: RFOR PARABRE declaracion_for PTCOMA expresion PTCOMA incremento_for PARCIERRA LLAVEABRE cuerpo_for LLAVECIERRA

  142 declaracion_for: declaracion
  143                | asignacion
  144                | declaracion_sin_valor

  145 incremento_for: asignacion
  146               | incremento_instruccion

  147 cuerpo_for: cuerpo_for instruccion_for_cuerpo
  148           | instruccion_for_cuerpo

  149 instruccion_for_cuerpo: func_printf PTCOMA
  150                       | instruccion_for
  151                       | instruccion_if
  152                       | incremento_instruccion PTCOMA
  153                       | asignacion PTCOMA
  154                       | RBREAK PTCOMA
  155                       | RCONTINUE PTCOMA
  156                       | instruccion_while
  157                       | declaracion PTCOMA
  158                       | declaracion_sin_valor PTCOMA
  159                       | creation_struct
  160                       | declaracion_arreglo
  161                       | instrucciones_vector
  162                       | instruccion_return PTCOMA


Terminals, with rules where they appear

    END (0) 0
    error (256)
    LLAVEABRE <std::string> (258) 4 5 6 7 8 9 10 11 12 46 101 102 103 104 121 122 123 124 141
    LLAVECIERRA <std::string> (259) 4 5 6 7 8 9 10 11 12 46 101 102 103 104 121 122 123 124 141
    RINT <std::string> (260) 4 5 6 49
    RFLOAT <std::string> (261) 15 50
    RSTRING <std::string> (262) 16 51
    RBOOL <std::string> (263) 17 52
    RPRINTF <std::string> (264) 93
    IGUAL <std::string> (265) 39 44 45 46 48 58 62 63 98 99
    PTCOMA <std::string> (266) 13 14 22 23 24 25 26 27 37 38 39 40 41 42 43 44 45 46 47 107 110 111 112 113 115 116 120 127 130 131 132 133 135 136 140 141 149 152 153 154 155 157 158 162
    OPSUMA <std::string> (267) 53
    OPRESTA <std::string> (268) 54 70
    OPMULTIPLICACION <std::string> (269) 55
    OPDIVISION <std::string> (270) 56
    OPMODULO <std::string> (271) 57
    PARABRE <std::string> (272) 4 5 6 7 8 9 10 11 37 38 40 41 42 69 71 72 73 76 77 78 80 81 89 90 93 101 102 103 104 121 122 124 141
    PARCIERRA <std::string> (273) 4 5 6 7 8 9 10 11 37 38 40 41 42 69 71 72 73 76 77 78 80 81 89 90 93 101 102 103 104 121 122 124 141
    TIPO_INTEGER <std::string> (274) 82
    TIPO_FLOAT <std::string> (275) 84
    TIPO_STRING <std::string> (276) 83
    TIPO_BOOL_TRUE <std::string> (277) 85
    TIPO_BOOL_FALSE <std::string> (278) 86
    ID <std::string> (279) 4 5 7 8 10 11 12 13 14 18 19 37 38 39 40 41 42 43 44 45 46 47 48 67 68 76 77 78 80 81 88 89 90 91 92 96 97 98 99 100
    MAYOR <std::string> (280) 43 44 45 60 62
    MENOR <std::string> (281) 43 44 45 61 63
    R_IF <std::string> (282) 101 102 103 104 121 122
    R_ELSE <std::string> (283) 121 122 123
    R_MAIN <std::string> (284) 6 9
    RVOID <std::string> (285) 7 8 9
    RAND <std::string> (286) 64
    ROR <std::string> (287) 65
    NOT <std::string> (288) 66
    NOIGUAL <std::string> (289) 59
    RWHILE <std::string> (290) 124
    RFOR <std::string> (291) 141
    RBREAK <std::string> (292) 112 132 154
    MASMAS <std::string> (293) 67 68 96 97
    RCONTINUE <std::string> (294) 113 133 155
    COMA <std::string> (295) 18 94
    RIOTA <std::string> (296) 73
    RATOI <std::string> (297) 71
    RATOF <std::string> (298) 72
    RSTRUCT <std::string> (299) 12 46 47
    PUNTO <std::string> (300) 39 40 41 42 89 90 92
    RVECTOR <std::string> (301) 43 44 45
    CORABRE <std::string> (302) 44 45 88 99
    CORCIERRA <std::string> (303) 44 45 88 99
    RGET <std::string> (304) 89
    RSIZE <std::string> (305) 90
    RPUSHBACK <std::string> (306) 40
    RPUSHFRONT <std::string> (307) 41
    RREMOVE <std::string> (308) 42
    RRETURN <std::string> (309) 35 36
    RMEAN <std::string> (310) 76
    RMEDIAN <std::string> (311) 77
    RMODE <std::string> (312) 78


Nonterminals, with rules where they appear

    $accept (58)
        on left: 0
    inicio <list_instruction*> (59)
        on left: 1
        on right: 0
    list_func <list_instruction*> (60)
        on left: 2 3
        on right: 1 2
    funcion <instruction*> (61)
        on left: 4 5 6 7 8 9 10 11 12
        on right: 2 3
    dec_list <map_struct_dec*> (62)
        on left: 13 14
        on right: 12 13
    otro_tipo_func <TipoDato> (63)
        on left: 15 16 17
        on right: 10 11
    func_list <map_struct_dec*> (64)
        on left: 18 19
        on right: 4 7 10 18
    list_inst_func <list_instruction*> (65)
        on left: 20 21
        on right: 4 5 6 7 8 9 10 11 20
    instruccion_funcion <instruction*> (66)
        on left: 22 23 24 25 26 27 28 29 30 31 32 33 34
        on right: 20 21
    instruccion_return <instruction_return*> (67)
        on left: 35 36
        on right: 22 120 140 162
    call_instruction <instruction*> (68)
        on left: 37 38 39
        on right: 34
    instrucciones_vector <instruction*> (69)
        on left: 40 41 42
        on right: 33 119 139 161
    declaracion_arreglo <create_vector*> (70)
        on left: 43 44 45
        on right: 31 118 138 160
    creation_struct <create_struct*> (71)
        on left: 46 47
        on right: 32 117 137 159
    declaracion <declaration*> (72)
        on left: 48
        on right: 23 115 135 142 157
    tipo <TipoDato> (73)
        on left: 49 50 51 52
        on right: 13 14 18 19 43 44 45 48 100
    expresion <expression*> (74)
        on left: 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79
        on right: 35 39 40 41 42 48 53 54 55 56 57 58 59 60 61 62 63 64 65 66 69 70 71 72 73 88 89 94 95 98 99 101 102 103 104 121 122 124 141
    call_expr <call_exp*> (75)
        on left: 80 81
        on right: 79
    primitivo <expression*> (76)
        on left: 82 83 84 85 86 87
        on right: 75
    op_vector <expression*> (77)
        on left: 88 89 90
        on right: 74
    llamada_variable <expression*> (78)
        on left: 91 92
        on right: 87
    func_printf <func_printf*> (79)
        on left: 93
        on right: 24 107 127 149
    lista_expresiones_printf <lista_expresiones*> (80)
        on left: 94 95
        on right: 37 44 46 80 93 94
    incremento_instruccion <incremento*> (81)
        on left: 96 97
        on right: 25 110 130 146 152
    asignacion <instruction*> (82)
        on left: 98 99
        on right: 26 111 131 143 145 153
    declaracion_sin_valor <declaracion_sin_valor*> (83)
        on left: 100
        on right: 27 116 136 144 158
    instruccion_if <instruction_if*> (84)
        on left: 101 102 103 104
        on right: 28 109 129 151
    cuerpo_if <list_instruction_second*> (85)
        on left: 105 106
        on right: 101 102 103 104 105 121 122 123
    instruccion_if_cuerpo <instruction*> (86)
        on left: 107 108 109 110 111 112 113 114 115 116 117 118 119 120
        on right: 105 106
    list_elseif <list_instruction_second*> (87)
        on left: 121 122
        on right: 101 102 121
    list_else <list_instruction_second*> (88)
        on left: 123
        on right: 101 103
    instruccion_while <instruction_while*> (89)
        on left: 124
        on right: 29 114 134 156
    cuerpo_while <list_instruction_second*> (90)
        on left: 125 126
        on right: 124 125
    instruccion_while_cuerpo <instruction*> (91)
        on left: 127 128 129 130 131 132 133 134 135 136 137 138 139 140
        on right: 125 126
    instruccion_for <instruction_for*> (92)
        on left: 141
        on right: 30 108 128 150
    declaracion_for <instruction*> (93)
        on left: 142 143 144
        on right: 141
    incremento_for <instruction*> (94)
        on left: 145 146
        on right: 141
    cuerpo_for <list_instruction_second*> (95)
        on left: 147 148
        on right: 141 147
    instruccion_for_cuerpo <instruction*> (96)
        on left: 149 150 151 152 153 154 155 156 157 158 159 160 161 162
        on right: 147 148


State 0

    0 $accept: . inicio END

    RINT     shift, and go to state 1
    RFLOAT   shift, and go to state 2
    RSTRING  shift, and go to state 3
    RBOOL    shift, and go to state 4
    RVOID    shift, and go to state 5
    RSTRUCT  shift, and go to state 6

    inicio          go to state 7
    list_func       go to state 8
    funcion         go to state 9
    otro_tipo_func  go to state 10


State 1

    4 funcion: RINT . ID PARABRE func_list PARCIERRA LLAVEABRE list_inst_func LLAVECIERRA
    5        | RINT . ID PARABRE PARCIERRA LLAVEABRE list_inst_func LLAVECIERRA
    6        | RINT . R_MAIN PARABRE PARCIERRA LLAVEABRE list_inst_func LLAVECIERRA

    ID      shift, and go to state 11
    R_MAIN  shift, and go to state 12


State 2

   15 otro_tipo_func: RFLOAT .

    $default  reduce using rule 15 (otro_tipo_func)


State 3

   16 otro_tipo_func: RSTRING .

    $default  reduce using rule 16 (otro_tipo_func)


State 4

   17 otro_tipo_func: RBOOL .

    $default  reduce using rule 17 (otro_tipo_func)


State 5

    7 funcion: RVOID . ID PARABRE func_list PARCIERRA LLAVEABRE list_inst_func LLAVECIERRA
    8        | RVOID . ID PARABRE PARCIERRA LLAVEABRE list_inst_func LLAVECIERRA
    9        | RVOID . R_MAIN PARABRE PARCIERRA LLAVEABRE list_inst_func LLAVECIERRA

    ID      shift, and go to state 13
    R_MAIN  shift, and go to state 14


State 6

   12 funcion: RSTRUCT . ID LLAVEABRE dec_list LLAVECIERRA

    ID  shift, and go to state 15


State 7

    0 $accept: inicio . END

    END  shift, and go to state 16


State 8

    1 inicio: list_func .
    2 list_func: list_func . funcion

    RINT     shift, and go to state 1
    RFLOAT   shift, and go to state 2
    RSTRING  shift, and go to state 3
    RBOOL    shift, and go to state 4
    RVOID    shift, and go to state 5
    RSTRUCT  shift, and go to state 6

    $default  reduce using rule 1 (inicio)

    funcion         go to state 17
    otro_tipo_func  go to state 10


State 9

    3 list_func: funcion .

    $default  reduce using rule 3 (list_func)


State 10

   10 funcion: otro_tipo_func . ID PARABRE func_list PARCIERRA LLAVEABRE list_inst_func LLAVECIERRA
   11        | otro_tipo_func . ID PARABRE PARCIERRA LLAVEABRE list_inst_func LLAVECIERRA

    ID  shift, and go to state 18


State 11

    4 funcion: RINT ID . PARABRE func_list PARCIERRA LLAVEABRE list_inst_func LLAVECIERRA
    5        | RINT ID . PARABRE PARCIERRA LLAVEABRE list_inst_func LLAVECIERRA

    PARABRE  shift, and go to state 19


State 12

    6 funcion: RINT R_MAIN . PARABRE PARCIERRA LLAVEABRE list_inst_func LLAVECIERRA

    PARABRE  shift, and go to state 20


State 13

    7 funcion: RVOID ID . PARABRE func_list PARCIERRA LLAVEABRE list_inst_func LLAVECIERRA
    8        | RVOID ID . PARABRE PARCIERRA LLAVEABRE list_inst_func LLAVECIERRA

    PARABRE  shift, and go to state 21


State 14

    9 funcion: RVOID R_MAIN . PARABRE PARCIERRA LLAVEABRE list_inst_func LLAVECIERRA

    PARABRE  shift, and go to state 22


State 15

   12 funcion: RSTRUCT ID . LLAVEABRE dec_list LLAVECIERRA

    LLAVEABRE  shift, and go to state 23


State 16

    0 $accept: inicio END .

    $default  accept


State 17

    2 list_func: list_func funcion .

    $default  reduce using rule 2 (list_func)


State 18

   10 funcion: otro_tipo_func ID . PARABRE func_list PARCIERRA LLAVEABRE list_inst_func LLAVECIERRA
   11        | otro_tipo_func ID . PARABRE PARCIERRA LLAVEABRE list_inst_func LLAVECIERRA

    PARABRE  shift, and go to state 24


State 19

    4 funcion: RINT ID PARABRE . func_list PARCIERRA LLAVEABRE list_inst_func LLAVECIERRA
    5        | RINT ID PARABRE . PARCIERRA LLAVEABRE list_inst_func LLAVECIERRA

    RINT       shift, and go to state 25
    RFLOAT     shift, and go to state 26
    RSTRING    shift, and go to state 27
    RBOOL      shift, and go to state 28
    PARCIERRA  shift, and go to state 29

    func_list  go to state 30
    tipo       go to state 31


State 20

    6 funcion: RINT R_MAIN PARABRE . PARCIERRA LLAVEABRE list_inst_func LLAVECIERRA

    PARCIERRA  shift, and go to state 32


State 21

    7 funcion: RVOID ID PARABRE . func_list PARCIERRA LLAVEABRE list_inst_func LLAVECIERRA
    8        | RVOID ID PARABRE . PARCIERRA LLAVEABRE list_inst_func LLAVECIERRA

    RINT       shift, and go to state 25
    RFLOAT     shift, and go to state 26
    RSTRING    shift, and go to state 27
    RBOOL      shift, and go to state 28
    PARCIERRA  shift, and go to state 33

    func_list  go to state 34
    tipo       go to state 31


State 22

    9 funcion: RVOID R_MAIN PARABRE . PARCIERRA LLAVEABRE list_inst_func LLAVECIERRA

    PARCIERRA  shift, and go to state 35


State 23

   12 funcion: RSTRUCT ID LLAVEABRE . dec_list LLAVECIERRA

    RINT     shift, and go to state 25
    RFLOAT   shift, and go to state 26
    RSTRING  shift, and go to state 27
    RBOOL    shift, and go to state 28

    dec_list  go to state 36
    tipo      go to state 37


State 24

   10 funcion: otro_tipo_func ID PARABRE . func_list PARCIERRA LLAVEABRE list_inst_func LLAVECIERRA
   11        | otro_tipo_func ID PARABRE . PARCIERRA LLAVEABRE list_inst_func LLAVECIERRA

    RINT       shift, and go to state 25
    RFLOAT     shift, and go to state 26
    RSTRING    shift, and go to state 27
    RBOOL      shift, and go to state 28
    PARCIERRA  shift, and go to state 38

    func_list  go to state 39
    tipo       go to state 31


State 25

   49 tipo: RINT .

    $default  reduce using rule 49 (tipo)


State 26

   50 tipo: RFLOAT .

    $default  reduce using rule 50 (tipo)


State 27

   51 tipo: RSTRING .

    $default  reduce using rule 51 (tipo)


State 28

   52 tipo: RBOOL .

    $default  reduce using rule 52 (tipo)


State 29

    5 funcion: RINT ID PARABRE PARCIERRA . LLAVEABRE list_inst_func LLAVECIERRA

    LLAVEABRE  shift, and go to state 40


State 30

    4 funcion: RINT ID PARABRE func_list . PARCIERRA LLAVEABRE list_inst_func LLAVECIERRA
   18 func_list: func_list . COMA tipo ID

    PARCIERRA  shift, and go to state 41
    COMA       shift, and go to state 42


State 31

   19 func_list: tipo . ID

    ID  shift, and go to state 43


State 32

    6 funcion: RINT R_MAIN PARABRE PARCIERRA . LLAVEABRE list_inst_func LLAVECIERRA

    LLAVEABRE  shift, and go to state 44


State 33

    8 funcion: RVOID ID PARABRE PARCIERRA . LLAVEABRE list_inst_func LLAVECIERRA

    LLAVEABRE  shift, and go to state 45


State 34

    7 funcion: RVOID ID PARABRE func_list . PARCIERRA LLAVEABRE list_inst_func LLAVECIERRA
   18 func_list: func_list . COMA tipo ID

    PARCIERRA  shift, and go to state 46
    COMA       shift, and go to state 42


State 35

    9 funcion: RVOID R_MAIN PARABRE PARCIERRA . LLAVEABRE list_inst_func LLAVECIERRA

    LLAVEABRE  shift, and go to state 47


State 36

   12 funcion: RSTRUCT ID LLAVEABRE dec_list . LLAVECIERRA
   13 dec_list: dec_list . tipo ID PTCOMA

    LLAVECIERRA  shift, and go to state 48
    RINT         shift, and go to state 25
    RFLOAT       shift, and go to state 26
    RSTRING      shift, and go to state 27
    RBOOL        shift, and go to state 28

    tipo  go to state 49


State 37

   14 dec_list: tipo . ID PTCOMA

    ID  shift, and go to state 50


State 38

   11 funcion: otro_tipo_func ID PARABRE PARCIERRA . LLAVEABRE list_inst_func LLAVECIERRA

    LLAVEABRE  shift, and go to state 51


State 39

   10 funcion: otro_tipo_func ID PARABRE func_list . PARCIERRA LLAVEABRE list_inst_func LLAVECIERRA
   18 func_list: func_list . COMA tipo ID

    PARCIERRA  shift, and go to state 52
    COMA       shift, and go to state 42


State 40

    5 funcion: RINT ID PARABRE PARCIERRA LLAVEABRE . list_inst_func LLAVECIERRA

    RINT     shift, and go to state 25
    RFLOAT   shift, and go to state 26
    RSTRING  shift, and go to state 27
    RBOOL    shift, and go to state 28
    RPRINTF  shift, and go to state 53
    ID       shift, and go to state 54
    R_IF     shift, and go to state 55
    RWHILE   shift, and go to state 56
    RFOR     shift, and go to state 57
    MASMAS   shift, and go to state 58
    RSTRUCT  shift, and go to state 59
    RVECTOR  shift, and go to state 60
    RRETURN  shift, and go to state 61

    list_inst_func          go to state 62
    instruccion_funcion     go to state 63
    instruccion_return      go to state 64
    call_instruction        go to state 65
    instrucciones_vector    go to state 66
    declaracion_arreglo     go to state 67
    creation_struct         go to state 68
    declaracion             go to state 69
    tipo                    go to state 70
    func_printf             go to state 71
    incremento_instruccion  go to state 72
    asignacion              go to state 73
    declaracion_sin_valor   go to state 74
    instruccion_if          go to state 75
    instruccion_while       go to state 76
    instruccion_for         go to state 77


State 41

    4 funcion: RINT ID PARABRE func_list PARCIERRA . LLAVEABRE list_inst_func LLAVECIERRA

    LLAVEABRE  shift, and go to state 78


State 42

   18 func_list: func_list COMA . tipo ID

    RINT     shift, and go to state 25
    RFLOAT   shift, and go to state 26
    RSTRING  shift, and go to state 27
    RBOOL    shift, and go to state 28

    tipo  go to state 79


State 43

   19 func_list: tipo ID .

    $default  reduce using rule 19 (func_list)


State 44

    6 funcion: RINT R_MAIN PARABRE PARCIERRA LLAVEABRE . list_inst_func LLAVECIERRA

    RINT     shift, and go to state 25
    RFLOAT   shift, and go to state 26
    RSTRING  shift, and go to state 27
    RBOOL    shift, and go to state 28
    RPRINTF  shift, and go to state 53
    ID       shift, and go to state 54
    R_IF     shift, and go to state 55
    RWHILE   shift, and go to state 56
    RFOR     shift, and go to state 57
    MASMAS   shift, and go to state 58
    RSTRUCT  shift, and go to state 59
    RVECTOR  shift, and go to state 60
    RRETURN  shift, and go to state 61

    list_inst_func          go to state 80
    instruccion_funcion     go to state 63
    instruccion_return      go to state 64
    call_instruction        go to state 65
    instrucciones_vector    go to state 66
    declaracion_arreglo     go to state 67
    creation_struct         go to state 68
    declaracion             go to state 69
    tipo                    go to state 70
    func_printf             go to state 71
    incremento_instruccion  go to state 72
    asignacion              go to state 73
    declaracion_sin_valor   go to state 74
    instruccion_if          go to state 75
    instruccion_while       go to state 76
    instruccion_for         go to state 77


State 45

    8 funcion: RVOID ID PARABRE PARCIERRA LLAVEABRE . list_inst_func LLAVECIERRA

    RINT     shift, and go to state 25
    RFLOAT   shift, and go to state 26
    RSTRING  shift, and go to state 27
    RBOOL    shift, and go to state 28
    RPRINTF  shift, and go to state 53
    ID       shift, and go to state 54
    R_IF     shift, and go to state 55
    RWHILE   shift, and go to state 56
    RFOR     shift, and go to state 57
    MASMAS   shift, and go to state 58
    RSTRUCT  shift, and go to state 59
    RVECTOR  shift, and go to state 60
    RRETURN  shift, and go to state 61

    list_inst_func          go to state 81
    instruccion_funcion     go to state 63
    instruccion_return      go to state 64
    call_instruction        go to state 65
    instrucciones_vector    go to state 66
    declaracion_arreglo     go to state 67
    creation_struct         go to state 68
    declaracion             go to state 69
    tipo                    go to state 70
    func_printf             go to state 71
    incremento_instruccion  go to state 72
    asignacion              go to state 73
    declaracion_sin_valor   go to state 74
    instruccion_if          go to state 75
    instruccion_while       go to state 76
    instruccion_for         go to state 77


State 46

    7 funcion: RVOID ID PARABRE func_list PARCIERRA . LLAVEABRE list_inst_func LLAVECIERRA

    LLAVEABRE  shift, and go to state 82


State 47

    9 funcion: RVOID R_MAIN PARABRE PARCIERRA LLAVEABRE . list_inst_func LLAVECIERRA

    RINT     shift, and go to state 25
    RFLOAT   shift, and go to state 26
    RSTRING  shift, and go to state 27
    RBOOL    shift, and go to state 28
    RPRINTF  shift, and go to state 53
    ID       shift, and go to state 54
    R_IF     shift, and go to state 55
    RWHILE   shift, and go to state 56
    RFOR     shift, and go to state 57
    MASMAS   shift, and go to state 58
    RSTRUCT  shift, and go to state 59
    RVECTOR  shift, and go to state 60
    RRETURN  shift, and go to state 61

    list_inst_func          go to state 83
    instruccion_funcion     go to state 63
    instruccion_return      go to state 64
    call_instruction        go to state 65
    instrucciones_vector    go to state 66
    declaracion_arreglo     go to state 67
    creation_struct         go to state 68
    declaracion             go to state 69
    tipo                    go to state 70
    func_printf             go to state 71
    incremento_instruccion  go to state 72
    asignacion              go to state 73
    declaracion_sin_valor   go to state 74
    instruccion_if          go to state 75
    instruccion_while       go to state 76
    instruccion_for         go to state 77


State 48

   12 funcion: RSTRUCT ID LLAVEABRE dec_list LLAVECIERRA .

    $default  reduce using rule 12 (funcion)


State 49

   13 dec_list: dec_list tipo . ID PTCOMA

    ID  shift, and go to state 84


State 50

   14 dec_list: tipo ID . PTCOMA

    PTCOMA  shift, and go to state 85


State 51

   11 funcion: otro_tipo_func ID PARABRE PARCIERRA LLAVEABRE . list_inst_func LLAVECIERRA

    RINT     shift, and go to state 25
    RFLOAT   shift, and go to state 26
    RSTRING  shift, and go to state 27
    RBOOL    shift, and go to state 28
    RPRINTF  shift, and go to state 53
    ID       shift, and go to state 54
    R_IF     shift, and go to state 55
    RWHILE   shift, and go to state 56
    RFOR     shift, and go to state 57
    MASMAS   shift, and go to state 58
    RSTRUCT  shift, and go to state 59
    RVECTOR  shift, and go to state 60
    RRETURN  shift, and go to state 61

    list_inst_func          go to state 86
    instruccion_funcion     go to state 63
    instruccion_return      go to state 64
    call_instruction        go to state 65
    instrucciones_vector    go to state 66
    declaracion_arreglo     go to state 67
    creation_struct         go to state 68
    declaracion             go to state 69
    tipo                    go to state 70
    func_printf             go to state 71
    incremento_instruccion  go to state 72
    asignacion              go to state 73
    declaracion_sin_valor   go to state 74
    instruccion_if          go to state 75
    instruccion_while       go to state 76
    instruccion_for         go to state 77


State 52

   10 funcion: otro_tipo_func ID PARABRE func_list PARCIERRA . LLAVEABRE list_inst_func LLAVECIERRA

    LLAVEABRE  shift, and go to state 87


State 53

   93 func_printf: RPRINTF . PARABRE lista_expresiones_printf PARCIERRA

    PARABRE  shift, and go to state 88


State 54

   37 call_instruction: ID . PARABRE lista_expresiones_printf PARCIERRA PTCOMA
   38                 | ID . PARABRE PARCIERRA PTCOMA
   39                 | ID . PUNTO ID IGUAL expresion PTCOMA
   40 instrucciones_vector: ID . PUNTO RPUSHBACK PARABRE expresion PARCIERRA PTCOMA
   41                     | ID . PUNTO RPUSHFRONT PARABRE expresion PARCIERRA PTCOMA
   42                     | ID . PUNTO RREMOVE PARABRE expresion PARCIERRA PTCOMA
   96 incremento_instruccion: ID . MASMAS
   98 asignacion: ID . IGUAL expresion
   99           | ID . CORABRE expresion CORCIERRA IGUAL expresion

    IGUAL    shift, and go to state 89
    PARABRE  shift, and go to state 90
    MASMAS   shift, and go to state 91
    PUNTO    shift, and go to state 92
    CORABRE  shift, and go to state 93


State 55

  101 instruccion_if: R_IF . PARABRE expresion PARCIERRA LLAVEABRE cuerpo_if LLAVECIERRA list_elseif list_else
  102               | R_IF . PARABRE expresion PARCIERRA LLAVEABRE cuerpo_if LLAVECIERRA list_elseif
  103               | R_IF . PARABRE expresion PARCIERRA LLAVEABRE cuerpo_if LLAVECIERRA list_else
  104               | R_IF . PARABRE expresion PARCIERRA LLAVEABRE cuerpo_if LLAVECIERRA

    PARABRE  shift, and go to state 94


State 56

  124 instruccion_while: RWHILE . PARABRE expresion PARCIERRA LLAVEABRE cuerpo_while LLAVECIERRA

    PARABRE  shift, and go to state 95


State 57

  141 instruccion_for: RFOR . PARABRE declaracion_for PTCOMA expresion PTCOMA incremento_for PARCIERRA LLAVEABRE cuerpo_for LLAVECIERRA

    PARABRE  shift, and go to state 96


State 58

   97 incremento_instruccion: MASMAS . ID

    ID  shift, and go to state 97


State 59
